Working on the Odin Project through Commit meessages

--- a/My first website/index.html
+++ b/My first website/index.html
@@ -6,9 +6,44 @@
     <title>Document</title>
   </head>
   <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-    quibusdam voluptates, ab officia suscipit voluptatem impedit rem fugit
-    mollitia non repellat illum cumque blanditiis pariatur, ullam inventore
-    minus fuga consectetur!
+    <h1>Lorem Ipsum</h1>
+    <p>
+      Lorem ipsum dolor <em>sit amet consectetur</em> adipisicing elit.
+      Repudiandae quibusdam voluptates, ab officia suscipit voluptatem impedit
+      rem fugit mollitia non repellat illum cumque <b>OOPS</b> blanditiis
+      pariatur, ullam inventore minus fuga consectetur!
+    </p>
+    <p>Well, hello there...</p>
+    <br />
+    <h4>Favorite foods</h4>
+    <ul>
+      <li>Bananas</li>
+      <li>Pizza Rolls</li>
+      <li>Goat Cheese</li>
+    </ul>
+    <br />
+    <h4>TO DO</h4>
+    <ol>
+      <li>Take out the trash</li>
+      <li>Do the dishes</li>
+      <li>Learn to code</li>
+    </ol>
+      <br />
+    <h4>I need to visit...</h4>
+    <ul>
+      <li>Japan</li>
+      <li>Italy</li>
+      <li>Canada</li>
+    </ul>
+    <br />
+    <h4>Favorite video games of all time</h4>
+    <ol>
+      <li>Super Metroid</li>
+      <li>Dark Souls</li>
+      <li>The Legend of Zelda: A Link to the Past</li>
+      <li>Half-Life 2</li>
+      <li>Sonic 3 & Knuckles</li>
+      <li>EXTRA: Final Fantasy VII</li>
+    </ol>
   </body>
 </html>
