--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,14 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset='UTF-8'/>
+    <title>Some Web Page</title>
   </head>
   <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-    quibusdam voluptates, ab officia suscipit voluptatem impedit rem fugit
-    mollitia non repellat illum cumque blanditiis pariatur, ullam inventore
-    minus fuga consectetur!
+    <h1>Some Web Page</h1>
+    <!-- Rest of the page content -->
   </body>
 </html>
